@@ -1,3 +1,4 @@
+* Make PYSON more Pythonic
 * Add readonly on Transaction
 * Add has_returning on Cursor
 * Remove use of python code in workflow XML
